<resources>
    <string name="app_name">Homework5</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="registration">Registration:</string>
    <string name="weather">Weather</string>
    <string name="san_diego">San Diego</string>
    <string name="_77">77</string>
    <string name="paris">Paris</string>
    <string name="new_york">New York</string>
    <string name="_77_">77°</string>
    <string name="_3_42pm">3:42pm</string>
    <string name="_32">32°</string>
    <string name="_56">56°</string>
    <string name="registate1">Registration</string>
    <string name="or_use_your_phone_number_to_sign_up">or use your phone number to sign up</string>
    <string name="country">Country:</string>
    <string name="number">Number:</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm">Confirm</string>
    <string name="get_the_code">Get the code</string>
    <string name="_00_43">00:43</string>
    <string name="name_meanings">Name Meanings</string>
    <string name="_11470">11470</string>
    <string name="boy_names">Boy names</string>
    <string name="_9530">9530</string>
    <string name="girl_names">Girl names</string>
    <string name="most_frequently_searched">Most frequently searched</string>
    <string name="most_favourite_names">Most favourite names</string>
    <string name="sorted_by_alphabet">Sorted by alphabet</string>
    <string name="discovery">Discovery</string>
    <string name="bars_and_hotels">Bars and Hotels</string>
    <string name="_42_places">42 Places</string>
    <string name="fine_dining">Fine Dining</string>
    <string name="_16_places">16 Places</string>
    <string name="cafes">Cafes</string>
    <string name="_28_places">28 Places</string>
    <string name="nearby">Nearby</string>
    <string name="fast_food">Fast Food</string>
    <string name="_29_places">29 Places</string>
    <string name="featured_food">Featured Food</string>
</resources>