<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/confirm_your_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/secondBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="105dp"
        android:background="@drawable/rounded_edittext"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate">

    </LinearLayout>

    <ImageView
        android:id="@+id/timePhoto"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_time"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toTopOf="@id/secondBackground"
        app:layout_constraintRight_toLeftOf="@id/timeText"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_43"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrate"
        app:layout_constraintTop_toTopOf="@id/secondBackground"/>


    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/grey"
        android:hint="@string/number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/get_the_code"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="again"
            android:textColor="@color/orange"
            android:textSize="15dp" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>